--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                 <P>asdasddaldj zcxzx zcxxz zxczxc zxczc zxczx zxczcx zxczaksljdlj alkjsd alkdjlas kajsdlkj jdj lakjds</P>
             </div> 
             <div class="image">
-                <img src="/peter_griffin.png">
+                <img src="./peter_griffin.png">
             </div>
             <div class="text-box">
                 <h3>textttttt</h3>
                 <P>asdasddaldjaksljdlj alkjsd alkdjlas kajsdlkj jdj lakjds</P>
             </div>
             <div class="image">
-                <img src="/sussss.png">
+                <img src="./sussss.png">
             </div>
             <div class="text-box">
                 <h3>textttttt</h3>
